// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/StatsBar Cpu Temp 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd iQIogj sc-iCfMLu gZewII sc-hGPBjI kBwkZQ"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu rflXv sc-hGPBjI krfBuV"
      >
        <span
          class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
        >
          <div
            class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI gUbMqQ"
          >
            <div
              class="sc-gKclnd exdBHI sc-iCfMLu jciJBO"
            >
              <span
                class="sc-fKVqWL hOcWtv sc-iwjdpV eiQZpM"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-microchip "
                  data-icon="microchip"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M160 352h192V160H160V352zM448 176h48C504.8 176 512 168.8 512 160s-7.162-16-16-16H448V128c0-35.35-28.65-64-64-64h-16V16C368 7.164 360.8 0 352 0c-8.836 0-16 7.164-16 16V64h-64V16C272 7.164 264.8 0 256 0C247.2 0 240 7.164 240 16V64h-64V16C176 7.164 168.8 0 160 0C151.2 0 144 7.164 144 16V64H128C92.65 64 64 92.65 64 128v16H16C7.164 144 0 151.2 0 160s7.164 16 16 16H64v64H16C7.164 240 0 247.2 0 256s7.164 16 16 16H64v64H16C7.164 336 0 343.2 0 352s7.164 16 16 16H64V384c0 35.35 28.65 64 64 64h16v48C144 504.8 151.2 512 160 512c8.838 0 16-7.164 16-16V448h64v48c0 8.836 7.164 16 16 16c8.838 0 16-7.164 16-16V448h64v48c0 8.836 7.164 16 16 16c8.838 0 16-7.164 16-16V448H384c35.35 0 64-28.65 64-64v-16h48c8.838 0 16-7.164 16-16s-7.162-16-16-16H448v-64h48C504.8 272 512 264.8 512 256s-7.162-16-16-16H448V176zM384 368c0 8.836-7.162 16-16 16h-224C135.2 384 128 376.8 128 368v-224C128 135.2 135.2 128 144 128h224C376.8 128 384 135.2 384 144V368z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
              >
                Temperature
              </span>
            </div>
            <span
              class="sc-fKVqWL hOcWtv sc-iwjdpV gTObXm"
              style="line-height: 1;"
            >
              ​
            </span>
          </div>
        </span>
        <span
          class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
        >
          ~34C
        </span>
      </div>
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dGhHw"
      >
        <div
          class="sc-gKclnd iQIogj sc-iCfMLu fEZMZA"
        >
          <div
            class="sc-fbyfCU gKjRVk sc-GEbAx hRVwCC"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQrDum dYtLAS"
            />
            <div
              class="sc-jUosCB dOhAxl"
              style="width: 34%;"
            >
              <div
                class="sc-fvxzrP gKQGZL"
                style="width: 294.11764705882354%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/StatsBar Cpu Usage 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd iQIogj sc-iCfMLu gZewII sc-hGPBjI kBwkZQ"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu rflXv sc-hGPBjI krfBuV"
      >
        <span
          class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
        >
          <div
            class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI gUbMqQ"
          >
            <div
              class="sc-gKclnd exdBHI sc-iCfMLu jciJBO"
            >
              <span
                class="sc-fKVqWL hOcWtv sc-iwjdpV eiQZpM"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-microchip "
                  data-icon="microchip"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M160 352h192V160H160V352zM448 176h48C504.8 176 512 168.8 512 160s-7.162-16-16-16H448V128c0-35.35-28.65-64-64-64h-16V16C368 7.164 360.8 0 352 0c-8.836 0-16 7.164-16 16V64h-64V16C272 7.164 264.8 0 256 0C247.2 0 240 7.164 240 16V64h-64V16C176 7.164 168.8 0 160 0C151.2 0 144 7.164 144 16V64H128C92.65 64 64 92.65 64 128v16H16C7.164 144 0 151.2 0 160s7.164 16 16 16H64v64H16C7.164 240 0 247.2 0 256s7.164 16 16 16H64v64H16C7.164 336 0 343.2 0 352s7.164 16 16 16H64V384c0 35.35 28.65 64 64 64h16v48C144 504.8 151.2 512 160 512c8.838 0 16-7.164 16-16V448h64v48c0 8.836 7.164 16 16 16c8.838 0 16-7.164 16-16V448h64v48c0 8.836 7.164 16 16 16c8.838 0 16-7.164 16-16V448H384c35.35 0 64-28.65 64-64v-16h48c8.838 0 16-7.164 16-16s-7.162-16-16-16H448v-64h48C504.8 272 512 264.8 512 256s-7.162-16-16-16H448V176zM384 368c0 8.836-7.162 16-16 16h-224C135.2 384 128 376.8 128 368v-224C128 135.2 135.2 128 144 128h224C376.8 128 384 135.2 384 144V368z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
              >
                CPU
              </span>
            </div>
            <span
              class="sc-fKVqWL hOcWtv sc-iwjdpV gTObXm"
              style="line-height: 1;"
            >
              ​
            </span>
          </div>
        </span>
        <span
          class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
        >
          ~23%
        </span>
      </div>
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dGhHw"
      >
        <div
          class="sc-gKclnd iQIogj sc-iCfMLu iBCaVk"
        >
          <div
            class="sc-fbyfCU gKjRVk sc-GEbAx hRVwCC"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQrDum dYtLAS"
            />
            <div
              class="sc-jUosCB dOhAxl"
              style="width: 100%;"
            >
              <div
                class="sc-fvxzrP gKQGZL"
                style="width: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gKclnd iQIogj sc-iCfMLu iBCaVk"
        >
          <div
            class="sc-fbyfCU gKjRVk sc-GEbAx hRVwCC"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQrDum dYtLAS"
            />
            <div
              class="sc-jUosCB dOhAxl"
              style="width: 100%;"
            >
              <div
                class="sc-fvxzrP gKQGZL"
                style="width: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gKclnd iQIogj sc-iCfMLu iBCaVk"
        >
          <div
            class="sc-fbyfCU gKjRVk sc-GEbAx hRVwCC"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQrDum dYtLAS"
            />
            <div
              class="sc-jUosCB dOhAxl"
              style="width: 0%;"
            >
              <div
                class="sc-fvxzrP gKQGZL"
                style="width: 0%;"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gKclnd iQIogj sc-iCfMLu iBCaVk"
        >
          <div
            class="sc-fbyfCU gKjRVk sc-GEbAx hRVwCC"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQrDum dYtLAS"
            />
            <div
              class="sc-jUosCB dOhAxl"
              style="width: 0%;"
            >
              <div
                class="sc-fvxzrP gKQGZL"
                style="width: 0%;"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gKclnd iQIogj sc-iCfMLu fEZMZA"
        >
          <div
            class="sc-fbyfCU gKjRVk sc-GEbAx hRVwCC"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQrDum dYtLAS"
            />
            <div
              class="sc-jUosCB dOhAxl"
              style="width: 0%;"
            >
              <div
                class="sc-fvxzrP gKQGZL"
                style="width: 0%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/StatsBar Memory 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd iQIogj sc-iCfMLu gZewII sc-hGPBjI kBwkZQ"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu rflXv sc-hGPBjI krfBuV"
      >
        <span
          class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
        >
          <div
            class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI gUbMqQ"
          >
            <div
              class="sc-gKclnd exdBHI sc-iCfMLu jciJBO"
            >
              <span
                class="sc-fKVqWL hOcWtv sc-iwjdpV eiQZpM"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-memory "
                  data-icon="memory"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 448h80v-32c0-8.838 7.164-16 16-16c8.838 0 16 7.162 16 16v32h96v-32c0-8.838 7.164-16 16-16c8.838 0 16 7.162 16 16v32h96v-32c0-8.838 7.164-16 16-16c8.838 0 16 7.162 16 16v32h96v-32c0-8.838 7.164-16 16-16c8.838 0 16 7.162 16 16v32H576v-96H0V448zM576 146.9V112C576 85.49 554.5 64 528 64h-480C21.49 64 0 85.49 0 112v34.94C18.6 153.5 32 171.1 32 192S18.6 230.5 0 237.1V320h576V237.1C557.4 230.5 544 212.9 544 192S557.4 153.5 576 146.9zM192 240C192 248.8 184.8 256 176 256h-32C135.2 256 128 248.8 128 240v-96C128 135.2 135.2 128 144 128h32C184.8 128 192 135.2 192 144V240zM320 240C320 248.8 312.8 256 304 256h-32C263.2 256 256 248.8 256 240v-96C256 135.2 263.2 128 272 128h32C312.8 128 320 135.2 320 144V240zM448 240C448 248.8 440.8 256 432 256h-32C391.2 256 384 248.8 384 240v-96C384 135.2 391.2 128 400 128h32C440.8 128 448 135.2 448 144V240z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
              >
                Memory
              </span>
            </div>
            <span
              class="sc-fKVqWL hOcWtv sc-iwjdpV gTObXm"
              style="line-height: 1;"
            >
              ​
            </span>
          </div>
        </span>
        <span
          class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
        >
          <span
            class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
          >
            453 MB
          </span>
          /
          <span
            class="sc-fKVqWL hOcWtv sc-iwjdpV bkSTit"
          >
            1 GB
          </span>
        </span>
      </div>
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dGhHw"
      >
        <div
          class="sc-gKclnd iQIogj sc-iCfMLu fEZMZA"
        >
          <div
            class="sc-fbyfCU gKjRVk sc-GEbAx hRVwCC"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQrDum dYtLAS"
            />
            <div
              class="sc-jUosCB dOhAxl"
              style="width: 45.300000000000004%;"
            >
              <div
                class="sc-fvxzrP gKQGZL"
                style="width: 220.75055187637966%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/StatsBar Storage 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd iQIogj sc-iCfMLu gZewII sc-hGPBjI kBwkZQ"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu rflXv sc-hGPBjI krfBuV"
      >
        <span
          class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
        >
          <div
            class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI gUbMqQ"
          >
            <div
              class="sc-gKclnd exdBHI sc-iCfMLu jciJBO"
            >
              <span
                class="sc-fKVqWL hOcWtv sc-iwjdpV eiQZpM"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-hard-drive "
                  data-icon="hard-drive"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M464 288h-416C21.5 288 0 309.5 0 336v96C0 458.5 21.5 480 48 480h416c26.5 0 48-21.5 48-48v-96C512 309.5 490.5 288 464 288zM320 416c-17.62 0-32-14.38-32-32s14.38-32 32-32s32 14.38 32 32S337.6 416 320 416zM416 416c-17.62 0-32-14.38-32-32s14.38-32 32-32s32 14.38 32 32S433.6 416 416 416zM464 32h-416C21.5 32 0 53.5 0 80v192.4C13.41 262.3 29.92 256 48 256h416c18.08 0 34.59 6.254 48 16.41V80C512 53.5 490.5 32 464 32z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
              >
                Storage
              </span>
            </div>
            <span
              class="sc-fKVqWL hOcWtv sc-iwjdpV gTObXm"
              style="line-height: 1;"
            >
              Storage block device
            </span>
          </div>
        </span>
        <span
          class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
        >
          <span
            class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
          >
            623 MB
          </span>
          /
          <span
            class="sc-fKVqWL hOcWtv sc-iwjdpV bkSTit"
          >
            1 GB
          </span>
        </span>
      </div>
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dGhHw"
      >
        <div
          class="sc-gKclnd iQIogj sc-iCfMLu fEZMZA"
        >
          <div
            class="sc-fbyfCU gKjRVk sc-GEbAx hRVwCC"
            color="#fff"
            type="warning"
          >
            <div
              class="sc-jQrDum dYtLAS"
            />
            <div
              class="sc-jUosCB cPDyyh"
              style="width: 62.3%;"
            >
              <div
                class="sc-fvxzrP gKQGZL"
                style="width: 160.51364365971108%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
